Updated backend routes and frontend views

--- a/frontend/views/login.ejs
+++ b/frontend/views/login.ejs
@@ -144,9 +144,9 @@
         // ADMIN: "http://localhost:2000/api/admin/auth/login",
         // CALLER: "http://localhost:2000/api/caller/auth/login",
         // DEO: "http://localhost:2000/api/deo/auth/login",
-        ADMIN: "http://127.0.0.1:2000/api/admin/auth/login",
-        CALLER: "http://127.0.0.1:2000/api/caller/auth/login",
-        DEO: "http://127.0.0.1:2000/api/deo/auth/login",
+        ADMIN: "http://crm.axpectportal.in/admin/auth/login",
+        CALLER: "http://crm.axpectportal.in/caller/auth/login",
+        DEO: "http://crm.axpectportal.in/deo/auth/login",
       };
 
       /***** UI elements *****/
