--- a/frontend/views/pages/caller/personal_details.ejs
+++ b/frontend/views/pages/caller/personal_details.ejs
@@ -75,7 +75,7 @@
         return;
       }
 
-      const res = await fetch("http://crm.axpectportal.in/caller/profile", {
+      const res = await fetch("https://crm.axpectportal.in/caller/profile", {
         headers: {
           "Authorization": `Bearer ${token}`, // 👈 Token bhejna zaroori hai
           "Content-Type": "application/json"
