--- a/frontend/views/layouts/caller.ejs
+++ b/frontend/views/layouts/caller.ejs
@@ -69,40 +69,43 @@
 </script>
 
   <script>
-  const token = localStorage.getItem('token');
-  const role = localStorage.getItem('role');
+  
 
   function logout() {
     localStorage.clear();
     window.location.href = "/";
   }
 
-  // async function verifyToken() {
-  //   if (!token && role != "CALLER") return logout();
+  async function verifyToken() {
 
-  //   try {
-  //     const res = await fetch("http://localhost:2000/api/caller/auth/verify", {
-  //       method: "POST",
-  //       headers: { 
-  //         "Content-Type": "application/json",
-  //         "Authorization": "Bearer " + token
-  //       }
-  //     });
+    const token = localStorage.getItem('token');
+    const role = localStorage.getItem('role');
 
-  //     const data = await res.json();
-  //     if (!res.ok || !data.success) {
-  //       logout();
-  //     }
-  //   } catch {
-  //     logout();
-  //   }
-  // }
+    if (!token && role != "CALLER") return logout();
 
-  // // 🚀 Check once at page load
-  // verifyToken();
+    try {
+      const res = await fetch("http://localhost:2000/api/caller/auth/verify", {
+        method: "POST",
+        headers: { 
+          "Content-Type": "application/json",
+          "Authorization": "Bearer " + token
+        }
+      });
 
-  // // 🚀 Keep checking every 1 minute (60000 ms)
-  // setInterval(verifyToken, 60000);
+      const data = await res.json();
+      if (!res.ok || !data.success) {
+        logout();
+      }
+    } catch {
+      logout();
+    }
+  }
+
+  // 🚀 Check once at page load
+  verifyToken();
+
+  // 🚀 Keep checking every 1 minute (60000 ms)
+  setInterval(verifyToken, 60000);
 </script>
 </body>
 </html>
