Updated backend routes and frontend views

--- a/frontend/views/layouts/caller.ejs
+++ b/frontend/views/layouts/caller.ejs
@@ -81,7 +81,7 @@
     const token = localStorage.getItem('token');
     const role = localStorage.getItem('role');
 
-    if (!token || role != "CALLER") return logout();
+    // if (!token && role != "CALLER") return logout();
 
     try {
       const res = await fetch("http://localhost:2000/api/caller/auth/verify", {
