--- a/frontend/views/layouts/caller.ejs
+++ b/frontend/views/layouts/caller.ejs
@@ -81,25 +81,25 @@
     const token = localStorage.getItem('token');
     const role = localStorage.getItem('role');
 
-    // if (!token && role != "CALLER") return logout();
+     if (!token && role != "CALLER") return logout();
 
-    try {
-      const res = await fetch("http://localhost:2000/api/caller/auth/verify", {
-        method: "POST",
-        headers: { 
-          "Content-Type": "application/json",
-          "Authorization": "Bearer " + token
+    // try {
+    //   const res = await fetch("http://localhost:2000/api/caller/auth/verify", {
+    //     method: "POST",
+    //     headers: { 
+    //       "Content-Type": "application/json",
+    //       "Authorization": "Bearer " + token
           
-        }
-      });
+    //     }
+    //   });
 
       const data = await res.json();
       if (!res.ok || !data.success) {
         logout();
       }
-    } catch {
-      logout();
-    }
+    // } catch {
+    //   logout();
+    // }
   }
 
   // 🚀 Check once at page load
