Updated backend routes and frontend views

--- a/frontend/views/layouts/caller.ejs
+++ b/frontend/views/layouts/caller.ejs
@@ -69,6 +69,9 @@
 </script>
 
   <script>
+
+    const token = localStorage.getItem('token');
+    const role = localStorage.getItem('role');
   
 
   function logout() {
@@ -78,10 +81,9 @@
 
   async function verifyToken() {
 
-    const token = localStorage.getItem('token');
-    const role = localStorage.getItem('role');
+    
 
-     if (!token && role != "CALLER") return logout();
+     if (!token) return logout();
 
     try {
       const res = await fetch("https://crm.axpectportal.in/caller/auth/verify", {
